cpu_server/k8s/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: fastapi-app:latest
        imagePullPolicy: Never
        command: ["celery", "-A", "celery_app", "worker", "--without-gossip", "--loglevel=info"]
