cpu_server/k8s/flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
      - name: flower
        image: fastapi-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5555
