cpu_server/k8s/postgres-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      containers:
      - name: exporter
        image: quay.io/prometheuscommunity/postgres-exporter:v0.14.0
        ports:
        - containerPort: 9187
        volumeMounts:
        - name: config
          mountPath: /etc/postgres_exporter
      volumes:
      - name: config
        configMap:
          name: postgres-exporter-config

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: default
spec:
  selector:
    app: postgres-exporter
  ports:
    - protocol: TCP
      port: 9187
      targetPort: 9187
