cpu_server/k8s/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  rules:
  - host: www.ai-text-classifier.ru
    http:
      paths:
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: fastapi-app
            port:
              number: 8000
